Stackless-Python News
+++++++++++++++++++++

This file documents user visible changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.

What's New in Stackless 3.X.X?
==============================

*Release date: 20XX-XX-XX*

- https://github.com/stackless-dev/stackless/issues/217
  C-API documentation update: update the names of watchdog flags to match the
  implementation.

- https://github.com/stackless-dev/stackless/issues/222
  Fix a bug that could cause an assertion failure and a reference leak during
  the termination of a main-tasklet, if an application embeds Stackless Python.

- https://github.com/stackless-dev/stackless/issues/219
  Fix a NULL pointer access in PyStackless_Schedule, if this function is called
  from from "outside" and if no current tasklet exists.


What's New in Stackless 3.6.7 and 3.6.8?
========================================

*Release date: 2019-01-20*  (3.6.8)
*Release date: 2019-01-20*  (3.6.7)

- https://github.com/stackless-dev/stackless/issues/190
  Silently ignore attempts to close a running generator, coroutine or
  asynchronous generator. This avoids spurious error messages, if such an
  object is deallocated as part of a paused, restorable tasklet.

- https://github.com/stackless-dev/stackless/issues/206
  Fix the error handling of the Python implementation of function-object
  pickling.

- https://github.com/stackless-dev/stackless/issues/204
  Fix bpo-24596 for Stackless too.

- https://github.com/stackless-dev/stackless/issues/200
  Fix a bug in the C-API functions PyTasklet_Run_nr() and
  PyTasklet_Switch_nr(). Under exotic conditions the functions could
  cause undefined behavior.

- https://github.com/stackless-dev/stackless/issues/193
  Fix the macros PyTasklet_CheckExact(op) and PyChannel_CheckExact(op).
  Previously they contained a reference to a non existing variable.

- https://github.com/stackless-dev/stackless/issues/182
  Fix "make teststackless" for out of tree builds

